app/src/main/java/com/example/hp/brahmsamaj/vo/Error/ForgotPasswordError.java
package com.example.hp.brahmsamaj.vo.Error;

import java.util.List;

public class ForgotPasswordError {
    private List<String> email;

    public List<String> getEmail() {
        return email;
    }

    public void setEmail(List<String> email) {
        this.email = email;
    }
}
